anotações.txt
1. Criando o projeto App Django
2. Habilitar o app /módulo polls
3. Criar uma view para app polls
4. adicionar as rotas
5. Inicializar o servidor de desenvolvimento para testar
6. Criar um templete HTML


========= Introdução ao templates ====================

- É usado o _ para caso em que o template não será o renderizado, mas será um complemento
- Estrutura de templates para reutilização _base.html
- templete de layout genérico _leyout1.html (Servirá de base para todo o desing do sitemea)
- Usa o Jinja (gerenciador de templete, junta partes estáticas com partes dinâmicas de acordo com o banco de dados ou depender da sua lógica):
    {{ }} => imprime valores de variáveis
    {% %} => execultar comandos:
        {% if var %}
            <a></a>
        {% else %}
        {% endif %}
    {# #} => comentários
- Aplicar o layout genérico em um templete final
- Arquivos estáticos ( imagens, CSS, JS e qualquer outro arquivo que não muda)
- implementação do collectstatic para gerenciamento de arquivo em para um futuro cenario de produção.
- Usar aquivo estático: favicon

================ Introdução aos models ==================

- Introdução ao ORM e models
- Migração de dados 
- Reversão de modelos
- criar um model
- criando uma question no terminal:
    (InteractiveConsole)
    >>> from polls.models import Question
    >>> Question.object.all()
    Traceback (most recent call last):
    File "<console>", line 1, in <module>
    AttributeError: type object 'Question' has no attribute 'object'
    >>> Question.objects.all()
    <QuerySet []>
    >>> from datetime importe datetime
    File "<console>", line 1
        from datetime importe datetime
                    ^^^^^^^
    SyntaxError: invalid syntax
    >>> from datetime import datetime
    >>> agora = datetime.now()
    >>> question1 = Question(question_text="Qual é sua duvida?", pub_date=agora)
    >>> question1.question_text
    'Qual é sua duvida?'
    >>> question1.id
    >>> question1.save()
    >>> question1.id
    1
    >>> Question.objects.all()
    <QuerySet [<Question: Question object (1)>]>
    >>> quit
    Use quit() or Ctrl-Z plus Return to exit
    >>> quit()
- exibir dados em um template

